Add service examples, API examples and ui.router example

--- a/app/partials/app.dashboard.html
+++ b/app/partials/app.dashboard.html
@@ -8,3 +8,9 @@ Vivamus semper dignissim est ac fermentum. Pellentesque non est sollicitudin, ph
 <p>
 Cras magna libero, blandit at ullamcorper eu, luctus quis risus. Vivamus in sapien dapibus, adipiscing dolor et, laoreet tellus. Cras quis sollicitudin metus, ut euismod erat. Quisque quis posuere metus. Aenean placerat ligula ut luctus aliquet. Pellentesque quis vulputate justo. Pellentesque pellentesque dignissim nisl sit amet feugiat. Fusce sollicitudin dui tortor, vel interdum diam iaculis ac.
 </p>
+
+<div>
+<button class="btn btn-success" ng-click="fetchData()">Fetch data</button>
+<p>Fetch Data: {{data}}</p>
+<button class="btn btn-success" ng-click="returnHome()">Return Home</button>
+</div>
