--- a/app/partials/app.dashboard.html
+++ b/app/partials/app.dashboard.html
@@ -11,6 +11,5 @@ Cras magna libero, blandit at ullamcorper eu, luctus quis risus. Vivamus in sapi
 
 <div>
 <button class="btn btn-success" ng-click="fetchData()">Fetch data</button>
-<p>Fetch Data: {{data}}</p>
-<button class="btn btn-success" ng-click="returnHome()">Return Home</button>
+<tpl-my-data></tpl-my-data>
 </div>
