--- a/app/partials/app.html
+++ b/app/partials/app.html
@@ -1,2 +1,3 @@
-<h1>User {{uid}}</h1>
+<h1>User {{uid}} 
+<button class="btn btn-success btn-xs" ng-click="returnHome()">Return Home</button></h1>
 <div ui-view></div>
